@@ -1,13 +1,13 @@
 import sys, os, xbmc, xbmcaddon
 
 # plugin constants
-__version__			= "0.2.0"
+__version__			= "0.2.1"
 __plugin__			= "OneDDL.com-" + __version__
 __author__			= "pgoeri"
 __url__				= "http://pgoeri-xbmc-plugins.googlecode.com"
 __svn_url__			= "http://pgoeri-xbmc-plugins.googlecode.com/svn/trunk/plugin.download.oneddl/"
 __XBMC_Revision__	= "4fbc70fda4f3706e4e90ff353acde49176c6a07c" # 01-07-2011
-__date__			= "02-10-2011"
+__date__			= "16-11-2011"
 
 __addon__			= xbmcaddon.Addon(id='plugin.download.oneddl')
 __language__		= __addon__.getLocalizedString
