@@ -1,3 +1,6 @@
+[B]Version 0.2.1[/B]
+    * Ignore duplicate filehoster links
+
 [B]Version 0.2.0[/B]
     * Refactoring (Using now the library DDLScraper)
     * Added search function
